--- a/appvideos/package.json
+++ b/appvideos/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^7.0.2",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "simple-youtube-api": "^5.1.1",
     "youtube-api-search": "^0.0.5"
   },
